--- a/Week4Day2-DOM/Q15/todo.html
+++ b/Week4Day2-DOM/Q15/todo.html
@@ -25,6 +25,6 @@ button {
 <button id="addTaskBtn">Add Task</button>
 
 <ul id="taskList"></ul>
-
+<script src="todo.js"></script>
 </body>
 </html>
